# path_semantics_std

./: Cargo.toml  README.md
examples/: and_not.rs
src/: constrain.rs  display.rs  lib.rs  path.rs  tri_path.rs
src/ex_path/: macros.rs  mod.rs  nat.rs
