[package]
name = "path_semantics_std"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
license = "MIT"
keywords = ["path", "semantics", "theorem", "proving", "advancedresearch"]
repository = "https://github.com/advancedresearch/path_semantics_std.git"
homepage = "https://github.com/advancedresearch/path_semantics_std"
documentation = "https://docs.rs/path_semantics_std"
readme = "README.md"
description = "A Rust type checked implementation of the standard dictionary of path semantics using constrained functions"

[dependencies]
